log
Fri 05 May 2023 07:00:28 PM UTC: 
 tests:  0|5
total_score: 0/70
d29d131
Fri 05 May 2023 07:03:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
22a438c
Fri 05 May 2023 07:03:48 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
7542629
Sun 07 May 2023 03:29:51 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|5
total_score: 0/70
6110a3d
Sun 07 May 2023 03:32:02 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:17: error: ‘sudo’ undeclared (first use in this function)
   55 |   printf("\n%d",sudo[0][0]);
      |                 ^~~~
sudoku.c:55:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
11537d2
Sun 07 May 2023 03:32:18 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4523623
